k8s/apps/grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
spec:
  type: NodePort
  selector:
    app: grafana
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30081
